NavegaLasRutas + Vacca Fernandez

--- a/src/App.css
+++ b/src/App.css
@@ -4,31 +4,80 @@
     box-sizing: border-box;
 }
 
+
 :root {
     --global-color-0 : #333333 ;
+    --global-color-0-claro:#303030;
     --global-color-1:#ffffff;
     --global-color-2: #a3660c;
     --global-color-3:#f6be6a;
+    --global-color-4:#5ffe46;
+    --font-principal:
 }
-
+/* globales */
+body{
+    background-color: var(--global-color-0-claro);
+}
+html{
+    box-sizing: border-box;
+    font-size: 62.5%;
+}
+h1{
+    font-size: 3rem;
+}
+h2{
+    font-size:2.5rem ;
+}
+h3{
+    font-size: 2rem;
+}
+a{
+    text-decoration: none;
+    color: var(--global-color-1);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.6rem;
+}
+p{
+    color: var(--global-color-1);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.6rem;
+}
 
 /*    NAVBAR   */
 
-.NavBar{
+
+.navBar{
     background-color: var(--global-color-0);
     color: var(--global-color-1);
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
+    gap: 2rem;
     align-items: center;
     padding: 20px;
 }
-.NavBar ul {
-    display: flex;
-    width: 30%;
+@media (min-width: 768px) {
+     .navBar{
+        flex-direction: row ;
+     }
 }
-.NavBar ul li {
-    width: 100%;
-    list-style: none;
+.navBar__logo{
+    border: var(--global-color-3) solid .1rem ;
+    padding: 1rem;
+    border-radius: 1rem;
+}
+.navBar h1 span{
+    color: var(--global-color-3);
+}
+.navBar__links{
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+}
+.navBar__link{
+    text-decoration: none;
+    color: var(--global-color-1);
+    
 }
 
 /* carrito  */
@@ -36,9 +85,11 @@
 .carrito {
     width: auto;
     display: flex;
+    align-items: center;
 }
 .bx {
-    font-size: 25px;
+    font-size: 2.5rem;
+    position: absolute;
 }
 .carrito p {
     background-color: var(--global-color-3);
@@ -47,4 +98,71 @@
     text-align: center;
     position: relative;
     bottom: 10px;
+}
+
+/* "productos" */
+.cont__productos{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 2rem;
+    width: 80%;
+    margin: 50px auto;
+}
+/* Api Rick */
+.cont__rick{
+  padding: 1rem;
+  border: var(--global-color-3) solid 1px;
+  border-radius: 10px;
+}
+.cont__rick__img{
+    width: 100%;
+    border-radius: 50%;
+}
+.cont__rick__info{
+    padding: 10px;
+    line-height: 1.3;
+}
+.cont__rick__info button {
+    width: 100%;
+    background-color: var(--global-color-3);
+    border: none;
+    padding: 5px;
+    margin-top: 5px;
+    border-radius: 10px;
+}
+@media (min-width: 768px) {
+     .cont__productos{
+        grid-template-columns: repeat(4,1fr);
+     }
+}
+/* item detail  */
+.item__detail{
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    margin: 50px auto;
+    gap: 2rem;
+    border: var(--global-color-3) solid 1px;
+    border-radius: 1rem;
+    padding: 2rem;
+    justify-content: center;
+    
+}
+@media (min-width: 768px) {
+     .item__detail{
+        flex-direction: row;
+        gap: 10rem;
+        align-items: center;
+     }
+}
+.item__detail img{
+    border-radius: 50%;
+}
+
+.item__detail__info h3{
+    margin-bottom: 2rem;
+    font-size: 3rem;
+}
+.item__detail__info {
+    line-height: 2;
 }
